--- a/.github/workflows/publish_branch.yml
+++ b/.github/workflows/publish_branch.yml
@@ -35,6 +35,9 @@ jobs:
           7.0.x
           8.0.x
         source-url: ${{env.fugro_source_url}}
+
+    - name: Bootstrap tooling
+      run: dotnet tool restore
         
     - name: Restore (nuget packages)
       run: dotnet restore
