--- a/.github/workflows/build_branches.yml
+++ b/.github/workflows/build_branches.yml
@@ -21,7 +21,7 @@ jobs:
       NUGET_AUTH_TOKEN: ${{secrets.GLOBAL_READ_PACKAGES_SECRET}}
       fugro_source_url: https://nuget.pkg.github.com/fugro/index.json
     steps:
-    - name: Checkout repository and initialize for LFS
+    - name: Checkout repository
       uses: actions/checkout@v4
 
     - name: Setup .NET SDK
@@ -29,7 +29,6 @@ jobs:
       with:
         dotnet-version: |
           6.0.x
-          7.0.x
           8.0.x
         source-url: ${{env.fugro_source_url}}
 
@@ -43,7 +42,7 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: Unit Test
-      run: dotnet test --configuration Release --no-build --filter 'TestCategory!=SpeedTest' --logger="trx;logfilename=TestResults.trx"
+      run: dotnet test --configuration Release --no-build --logger="trx;logfilename=TestResults.trx"
  
     - name: Reporting
       uses: dorny/test-reporter@v1
