--- a/.github/workflows/publish_main.yml
+++ b/.github/workflows/publish_main.yml
@@ -20,7 +20,7 @@ jobs:
       NUGET_AUTH_TOKEN: ${{secrets.GLOBAL_READ_PACKAGES_SECRET}}
       fugro_source_url: https://nuget.pkg.github.com/fugro/index.json
     steps:
-    - name: Checkout repository and initialize for LFS
+    - name: Checkout repository
       uses: actions/checkout@v4
 
     - name: Setup .NET SDK
@@ -28,13 +28,12 @@ jobs:
       with:
         dotnet-version: |
           6.0.x
-          7.0.x
           8.0.x
         source-url: ${{env.fugro_source_url}}
 
     - name: Bootstrap tooling
       run: dotnet tool restore
-      
+
     - name: Restore (nuget packages)
       run: dotnet restore
 
