fixup! working to fix issue publishing nuget package

--- a/.github/workflows/build_branches.yml
+++ b/.github/workflows/build_branches.yml
@@ -10,7 +10,7 @@ on:
 defaults:
   run:
     shell: bash
-    working-directory: ./
+    working-directory: ./Source
 
 jobs:
   build_and_test:
@@ -31,9 +31,6 @@ jobs:
           6.0.x
           8.0.x
         source-url: ${{env.fugro_source_url}}
-
-    - name: Bootstrap tooling
-      run: dotnet tool restore
 
     - name: Restore (nuget packages)
       run: dotnet restore
