--- a/.github/workflows/publish_branch.yml
+++ b/.github/workflows/publish_branch.yml
@@ -9,7 +9,7 @@ on:
 defaults:
   run:
     shell: bash
-    working-directory: ./
+    working-directory: ./Source
 
 jobs:
   build_test_publish:
@@ -21,11 +21,7 @@ jobs:
       fugro_source_url: https://nuget.pkg.github.com/fugro/index.json
     steps:    
     - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        lfs: true
-    - name: Checkout LFS objects
-      run: git lfs checkout
+      uses: actions/checkout@v4      
 
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v3
@@ -34,9 +30,6 @@ jobs:
           6.0.x
           8.0.x
         source-url: ${{env.fugro_source_url}}
-
-    - name: Bootstrap tooling
-      run: dotnet tool restore
         
     - name: Restore (nuget packages)
       run: dotnet restore
@@ -51,5 +44,5 @@ jobs:
       run: dotnet pack --configuration Release --no-build -p:Version="${GITHUB_REF#*b}-Beta-${GITHUB_RUN_NUMBER}"
       
     - name: Publish
-      run: dotnet nuget push --skip-duplicate --source ${{env.fugro_source_url}} --api-key "${{secrets.GITHUB_TOKEN}}" './../Artifacts/*.nupkg'
+      run: dotnet nuget push --skip-duplicate --source ${{env.fugro_source_url}} --api-key "${{secrets.GITHUB_TOKEN}}" './Artifacts/*.nupkg'
  
