--- a/.github/workflows/publish_main.yml
+++ b/.github/workflows/publish_main.yml
@@ -9,7 +9,7 @@ on:
 defaults:
   run:
     shell: bash
-    working-directory: ./
+    working-directory: ./Source
 
 jobs:
   build_test_publish:
@@ -31,9 +31,6 @@ jobs:
           8.0.x
         source-url: ${{env.fugro_source_url}}
 
-    - name: Bootstrap tooling
-      run: dotnet tool restore
-
     - name: Restore (nuget packages)
       run: dotnet restore
 
@@ -47,7 +44,7 @@ jobs:
       run: dotnet pack --configuration Release --no-build -p:Version=${GITHUB_REF#*v}
 
     - name: Publish
-      run: dotnet nuget push --skip-duplicate --source ${{env.fugro_source_url}} --api-key "${{secrets.GITHUB_TOKEN}}" './../Artifacts/*.nupkg'
+      run: dotnet nuget push --skip-duplicate --source ${{env.fugro_source_url}} --api-key "${{secrets.GITHUB_TOKEN}}" './Artifacts/*.nupkg'
 
     - name: Reporting
       uses: dorny/test-reporter@v1
